Revision history for Perl extension IPC::Semaphore::SmokeSignals

0.001_002
  - Fix bug when using multi-byte tokins.
  - Expand documentation.
  - Add tests.
  - Support named pipes (FIFOs).
  - Support non-blocking operations.
  - Simplify getting $N appropriate tokins.
  - Have c'tor fail if your system can't handle that much tokin'.

0.001_001   Long ago
  - Initial release on http://www.perlmonks.org?node=tye